# Incorporator

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Constants_API.py  Dockerfile  Incorporator.py  LICENSE  NASCAR_API.py  POKEMON_API.py  README.md  RICKANDMORTY_API.py  RickAndMorty_Testing  SECURITY.md  docker-compose.yml  incorporator.toml  pokemonTst.py  pyproject.toml  requirements-dev.txt  testRickAndMortyOOP.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
docs/: 10_debugging_get_error.md  10_multi_source_fjord.md  11_tideweaver.md  1_first_steps.md  1_quick_setup.md  2_advanced_etl_calc.md  2_data_lake_pivot.md  2_universal_formats.md  3_dx_inspector.md  3_graph_mapping.md  3_parent_child_drilling.md  3_universal_formats.md  4_parent_child_drilling.md  4_stateful_refresh.md  4_xml_post_audit.md  4_xml_post_auditing.md  5_data_lake_pivot.md  5_parent_child_drilling.md  5_stateful_refresh.md  5_streaming_daemon.md  6_multi_source_fjord.md  6_spacex_launches.md  6_streaming_daemon.md  7_multi_source_fjord.md  7_stateful_refresh.md  7_tideweaver.md  8_dx_inspector.md  8_streaming_daemon.md  8_tideweaver.md  9_nascar_fantasy_fjord.md  9_stateful_refresh.md  THANK_YOU.md  advanced_etl_calc.md  api_atlas.md  api_reference.md  benchmark_results_v1.1.3_historical.md  canal_evaluation.md  canal_integration_audit.md  cli_and_configuration.md  debugging.md  (+11 more)
docs/appendix/: crypto_graph_mapping.md  data_lake_pivot.md  nascar_fantasy_fjord.md  nascar_tideweaver.md  pokeapi_etl.md  spacex_launches.md  tideweaver_parquet_snapshots.md  tideweaver_vs_prefect.md  xml_post_audit.md
docs/releases/: v1.3.6-social.md  v1.3.6.md
docs/reviews/: httpx-vs-canal-v1.2.1.md  pydantic-canal-v1.2.1.md
examples/: .gitignore  10_debugging_get_error.py  1_first_steps.py  1_space_devs_quick_setup.py  2_pokeapi_etl_calc.py  2_universal_formats.py  3_crypto_graph_mapping.py  3_dx_inspector.py  3_parent_child_drilling.py  4_nhtsa_post_audit.py  4_parent_child_drilling.py  5_data_lake_pivot.py  5_stateful_refresh.py  5_streaming_daemon.py  6_multi_source_fjord.py  6_streaming_daemon.py  7_arb_scanner_tideweaver.py  7_multi_source_fjord.py  7_nascar_tideweaver.py  8_dx_inspector.py  8_nascar_tideweaver.py  9_stateful_refresh.py  README.md  cleaned_users.csv  conftest.py  crypto_graph_mapping.py  nascar_fantasy_fjord.py  nascar_watershed.json  nhtsa_post_audit.py  pipeline_fjord.json  pokeapi_etl_calc.py  space_devs_quick_setup.py  user_etl_showcase.py
examples/01-first-steps/: README.md  first_steps.py
examples/02-data-lake-pivot/: README.md  data_lake_pivot.py  pipeline.json
examples/02-universal-formats/: README.md  universal_formats.py
examples/03-parent-child-drilling/: README.md  parent_child_drilling.py
examples/03-universal-formats/: README.md  universal_formats.py
examples/04-stateful-refresh/: README.md  stateful_refresh.py
examples/04-xml-post-audit/: README.md  nhtsa_post_audit.py  outflow.py  pipeline.json
examples/05-parent-child-drilling/: README.md  inflow.py  parent_child_drilling.py  watershed.json
examples/05-streaming-daemon/: README.md  streaming_daemon.py
examples/06-city-sports/: README.md  city_sports.py
examples/06-multi-source-fjord/: README.md  crypto_spread.py  fjord.py  launch_with_rocket.py
examples/06-spacex-launches/: README.md  spacex_launches.py
examples/06-state-sports/: README.md  outflow.py  state_sports.py
examples/07-stateful-refresh/: README.md  stateful_refresh.py
examples/07-tideweaver/: README.md  arb_outflow.py  arb_scanner.py  watershed.json
examples/08-streaming-daemon/: README.md  outflow.py  pipeline.json  pipeline_stateful.json  streaming_daemon.py
examples/09-nascar-fantasy-fjord/: README.md  driver.py  inflow.py  nascar_fantasy.py  outflow.py  pipeline.json
examples/10-multi-source-fjord/: README.md  crypto_spread.py  fjord.py  inflow.py  launch_with_rocket.py  outflow.py  pipeline.json
examples/11-tideweaver/: README.md  arb_outflow.py  arb_scanner.py  outflow.py  watershed.json
examples/appendix/: README.md  nhtsa_post_audit.py  pokeapi_etl_calc.py  spacex_launches.py
examples/cli-templates/: README.md  daemon-mode.json  fjord-basic.json  outflow_example.py  stream-basic.json  with-auth.json
examples/fjord_code/: crypto_spread.py  launch_with_rocket.py  league_teams.json  nascar_fantasy.py  outflow_example.py
examples/tideweaver_code/: arb_outflow.py  binance_book.json  kraken_ticker.json  pits.json  race_outflow.py
incorporator/: __init__.py  base.py  cli.py  cli_scaffold.py  cli_validate.py  dead_letter.py  exceptions.py  factory.py  list.py  prefect_nodes.py  rejects.py  usercode.py
incorporator/cli/: __init__.py  _pipeline_config.py  deps.py  envexpand.py  runners.py  scaffold.py  tideweaver.py  tokens.py  validate.py
incorporator/config/: __init__.py  envexpand.py  pipeline.py  (+1 more)
scripts/: build_docs.py
src/: NASCAR_API.py  POKEMON_API.py  RICKANDMORTY_API.py  main.py
tests/: conftest.py  helpers.py  nascarTst.py  pokemonTst.py  testRickAndMortyOOP.py  test_append_fallback.py  test_architect.py  test_architect_tune.py  test_atomic_writes.py  test_auto_paginator.py  test_binary_handlers.py  test_bulk_inc_dict.py  test_canal_reject_telemetry.py  test_chunk_size_aimd.py  test_cli.py  test_cli_directives_integration.py  test_cli_envexpand.py  test_cli_runners_tideweaver_conv_dict.py  test_cli_tideweaver.py  test_cli_tokens.py  test_cli_validate.py  test_compression.py  test_config_envexpand.py  test_config_paths.py  test_config_tokens.py  test_converters.py  test_dead_letter.py  test_deps_public_api.py  test_extractors_and_list.py  test_factory_child_incorp.py  test_fetch_streaming.py  test_filtered_drill_current.py  test_fjord.py  test_fjord_multi_output.py  test_flush_passthrough.py  test_format_boundaries.py  test_format_parsers.py  test_format_roundtrip.py  test_handlers_feather.py  test_handlers_html.py  (+72 more)
tools/: sync_pyproject.py
(+187 files in other folders)
