[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incorporator"
version = "1.0.0"
description = "The Dynamic Class Building and Zero-Boilerplate Universal Data Gateway."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors =[
    { name = "Incorporator Maintainers" }
]
keywords =[
    "etl",
    "api",
    "pydantic",
    "dynamic-models",
    "json",
    "csv",
    "xml",
    "asyncio",
    "hateoas"
]
classifiers =[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies =[
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.0.0"
]

[project.urls]
Repository = "https://github.com/your-org/incorporator"
"Bug Tracker" = "https://github.com/your-org/incorporator/issues"

[project.optional-dependencies]
dev =[
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[tool.setuptools.packages.find]
include = ["incorporator", "incorporator.*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=incorporator --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select =[
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "B",  # flake8-bugbear
    "S",  # flake8-bandit (SECURITY RULES)
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"