[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incorporator"
version = "1.0.8"
description = "A Zero-Boilerplate Universal Data Gateway and Pipeline Orchestration Platform."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Incorporator Maintainers" }
]
keywords =[
    "etl",
    "api",
    "pydantic",
    "dynamic-models",
    "json",
    "csv",
    "xml",
    "asyncio",
    "hateoas",
    "orchestration",
    "pipeline"
]
classifiers =[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies =[
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.0.0"
]

[project.urls]
Repository = "https://github.com/PyPlumber/incorporator"
"Bug Tracker" = "https://github.com/PyPlumber/incorporator/issues"
[project.optional-dependencies]
dev =[
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-randomly>=3.15.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=24.0"
]
# The GIL-releasing C/Rust upgrades
speedups =["orjson>=3.9", "lxml>=4.9", "cramjam>=2.7"]
# Big Data Formats
avro =["fastavro>=1.8"]
# The v2.0 Pipeline Orchestration Upgrades
orchestrate =[
    "typer>=0.9.0",
    "prefect>=2.10.0"
]
# The developer "install everything" flag
all =[
    "orjson>=3.9",
    "lxml>=4.9",
    "cramjam>=2.7",
    "fastavro>=1.8",
    "typer>=0.9.0",
    "prefect>=2.10.0"
]

[project.scripts]
# Exposes the Typer application to the terminal
incorporator = "incorporator.cli:main"

[tool.setuptools.packages.find]
include = ["incorporator", "incorporator.*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=incorporator --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "examples",
    "tests",
]

[tool.ruff.lint]
select =[
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "B",  # flake8-bugbear
    "S",  # flake8-bandit (SECURITY RULES)
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Black runs as an independent cross-check formatter at the same line-length as
# ruff format. When configured at matching widths, black and ruff format produce
# (effectively) identical output — so any drift between them surfaces a real bug
# in one of the two formatters rather than a style disagreement.
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
extend-exclude = '''
/(
    examples
  | tests
  | build
  | dist
  | \.venv
)/
'''