[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incorporator"
version = "1.1.1"
description = "A Zero-Boilerplate Universal Data Gateway and Pipeline Orchestration Platform."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Incorporator Maintainers" }
]
keywords =[
    "etl",
    "api",
    "pydantic",
    "dynamic-models",
    "json",
    "csv",
    "xml",
    "asyncio",
    "hateoas",
    "orchestration",
    "pipeline"
]
classifiers =[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies =[
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.0.0"
]

[project.urls]
Repository = "https://github.com/PyPlumber/incorporator"
"Bug Tracker" = "https://github.com/PyPlumber/incorporator/issues"
[project.optional-dependencies]
dev =[
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-randomly>=3.15.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=24.0"
]
# The GIL-releasing C/Rust upgrades
speedups =["orjson>=3.9", "lxml>=4.9", "cramjam>=2.7"]
# Big Data Formats
avro =["fastavro>=1.8"]
# Business spreadsheets — pure Python, ~250 KB, fits the microclient identity
xlsx =["openpyxl>=3.1"]
# Columnar format for data lakes / warehouses. Pyarrow is ~30 MB — deliberately
# NOT included in [all] to keep the "everything reasonable" install lean.
# tzdata is required on Windows for pyarrow's ORC reader, which hardcodes
# /usr/share/zoneinfo lookups regardless of platform. Linux/macOS ship the
# IANA data natively, so the marker keeps the wheel weight off non-Windows
# installs.
parquet =[
    "pyarrow>=14.0",
    "tzdata>=2024.1; sys_platform == 'win32'",
]
# The v2.0 Pipeline Orchestration Upgrades
orchestrate =[
    "typer>=0.9.0",
    "prefect>=2.10.0"
]
# Documentation generation (contributor-only — NOT added to [all])
docs =["pdoc>=14.0"]
# The developer "install everything reasonable" flag.
# NOTE: heavyweight deps (e.g. pyarrow for Parquet, ~50 MB) are intentionally
# excluded — users opt into those explicitly via incorporator[parquet] etc.
all =[
    "orjson>=3.9",
    "lxml>=4.9",
    "cramjam>=2.7",
    "fastavro>=1.8",
    "openpyxl>=3.1",
    "typer>=0.9.0",
    "prefect>=2.10.0"
]

[project.scripts]
# Exposes the Typer application to the terminal
incorporator = "incorporator.cli:main"

[tool.setuptools.packages.find]
include = ["incorporator", "incorporator.*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=incorporator --cov-report=term-missing -m 'not benchmark'"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "benchmark: performance benchmarks; opt-in only (run with -m benchmark)",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "examples",
    "tests",
]

[tool.ruff.lint]
select =[
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "B",  # flake8-bugbear
    "S",  # flake8-bandit (SECURITY RULES)
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Black runs as an independent cross-check formatter at the same line-length as
# ruff format. When configured at matching widths, black and ruff format produce
# (effectively) identical output — so any drift between them surfaces a real bug
# in one of the two formatters rather than a style disagreement.
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
extend-exclude = '''
/(
    examples
  | tests
  | build
  | dist
  | \.venv
)/
'''